correcting display of the login form on small screens (media request)

--- a/src/assets/styles/Pages_styles/CategoryStyle.scss
+++ b/src/assets/styles/Pages_styles/CategoryStyle.scss
@@ -1,27 +1,16 @@
 
 .resSearchFiveFilms {
-    // justify-content: center;
-    // border-radius: 0.5rem;
-    // border-width: 2px;
-    // border-color: rgba(255, 255, 255, 0.05);
-    // background-color: rgba(0, 0, 0, 0.6);
-    // margin-top: 20px;
+    justify-content: center;
     width: 100%;
-    margin-left: 50px;
   }
   
   .header {
     display: flex;
     font-family: Tahoma, Arial, Verdana, sans-serif;
     font-size: 25px;
-    // border-radius: 0.5rem;
-    // border-width: 2px;
-    // border-color: rgba(255, 255, 255, 0.05);
-    // background-color: rgba(0, 0, 0, 0.6);
     margin-top: 100px;
     padding: 10px;
     margin-left: 50px;
-    // justify-content: center;
     cursor: pointer;
   }
   
